// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`embeddings 1`] = `
{
  "body": "{"model":"nomic-embed-text","input":"hi"}",
  "headers": {},
  "method": "POST",
  "url": "http://localhost:11434/api/embed",
}
`;

exports[`embeddings 2`] = `
{
  "body": "{"model":"text-embedding-ada-002","input":"hi"}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/embeddings",
}
`;

exports[`embeddings 3`] = `
{
  "body": "{"model":"voyage-3-lite","input":"hi"}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.voyageai.com/v1/embeddings",
}
`;

exports[`dump 1`] = `
{
  "model": "nomic-embed-text",
  "options": {},
  "params": {
    "input": "hi",
  },
  "provider": "ollama",
  "type": "embedding",
  "version": "0.2.4",
}
`;

exports[`dump 2`] = `
{
  "model": "text-embedding-ada-002",
  "options": {
    "apiKey": "<key>",
  },
  "params": {
    "input": "hi",
  },
  "provider": "openai",
  "type": "embedding",
  "version": "0.2.4",
}
`;

exports[`dump 3`] = `
{
  "model": "voyage-3-lite",
  "options": {
    "apiKey": "<key>",
  },
  "params": {
    "input": "hi",
  },
  "provider": "voyageai",
  "type": "embedding",
  "version": "0.2.4",
}
`;
